* Adding ControllerInfo_UI
    + Added Controller Info
    + Adding Info of ATIS when download info
    + Fix some little adjust in PilotInfo_UI
    + Added file for ControllerInfo_UI
    + Adding new class to codebase for Controller Info
    + Adding check if event coming from Controller of Pilot Info
      with QAction menu
    + Fixing no single row when chenga in tabs to not bug Show Info

--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -1382,7 +1382,7 @@
        <enum>QAbstractItemView::SelectRows</enum>
       </property>
       <property name="textElideMode">
-       <enum>Qt::ElideMiddle</enum>
+       <enum>Qt::ElideRight</enum>
       </property>
       <property name="gridStyle">
        <enum>Qt::DotLine</enum>
