* Added status of traveled in progressBar
    + Now can see the progressBar where pilot has distance traveled
    + Added module geopy to know distance between 2 point in radius
      of The Earth
    + Retranslate the README file as translate.google.com recommend
    + Added natucilas miles info in PilotInfo_UI

--- a/QtUI/PilotInfo_UI.ui
+++ b/QtUI/PilotInfo_UI.ui
@@ -845,6 +845,30 @@
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="nauticalmiles">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>168</y>
+      <width>101</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
