* Fix rating into Friend roster table
    + Fixed rating with correct var when load ivao friends
    + Added status bar into PilotInfo_UI
    + Added status bar into ControllerInfo_UI
    + Fix show Added Friend when Add Friend button click
    + Now reight-click QMenu in SearchTableWidget works for Map
      to see Controllers and Pilots, and show Info of both
    + Now Search by country when initial load show the 1st country view

--- a/QtUI/PilotInfo_UI.ui
+++ b/QtUI/PilotInfo_UI.ui
@@ -870,6 +870,7 @@
     </property>
    </widget>
   </widget>
+  <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <resources/>
  <connections>
