--- a/QtUI/ControllerInfo_UI.ui
+++ b/QtUI/ControllerInfo_UI.ui
@@ -399,7 +399,7 @@
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>400</y>
+      <y>395</y>
       <width>99</width>
       <height>23</height>
      </rect>
@@ -420,7 +420,7 @@
     <property name="geometry">
      <rect>
       <x>95</x>
-      <y>400</y>
+      <y>395</y>
       <width>99</width>
       <height>23</height>
      </rect>
@@ -521,6 +521,7 @@
     </property>
    </widget>
   </widget>
+  <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <resources/>
  <connections>
