* Add column Country text and rename flag column
    + Now can see almost all flag and Country name in ATCFullList
    + Setting re-order of ColumnWidth in ATCFullList by new flag column
    + Fixing bug when ControllerInfo_UI load the zero
      empty time
    + Fixed ControllerInfo_UI when show connected player
    + Adjust little more column at inbound/outbound flight
      in SearchCountry
    + Add new image for IVAO members as flag  O:)
    + Show ivao image if some IVAO member is connected

--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -1283,10 +1283,10 @@
        <bool>false</bool>
       </property>
       <attribute name="horizontalHeaderDefaultSectionSize">
-       <number>105</number>
+       <number>110</number>
       </attribute>
       <attribute name="horizontalHeaderMinimumSectionSize">
-       <number>105</number>
+       <number>110</number>
       </attribute>
       <attribute name="horizontalHeaderStretchLastSection">
        <bool>true</bool>
@@ -1305,6 +1305,11 @@
       <column>
        <property name="text">
         <string>Frequency</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Flag</string>
        </property>
       </column>
       <column>
