--- a/QtUI/SettingWindow_UI.ui
+++ b/QtUI/SettingWindow_UI.ui
@@ -103,10 +103,13 @@
     </property>
    </widget>
    <widget class="QCheckBox" name="Setting_checkBox">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>14</x>
-      <y>46</y>
+      <y>68</y>
       <width>85</width>
       <height>21</height>
      </rect>
@@ -131,12 +134,12 @@
    </widget>
    <widget class="QLabel" name="proxy_host">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>79</y>
+      <y>101</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -155,12 +158,12 @@
    </widget>
    <widget class="QLabel" name="proxy_port">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>103</y>
+      <y>125</y>
       <width>31</width>
       <height>16</height>
      </rect>
@@ -179,12 +182,12 @@
    </widget>
    <widget class="QLabel" name="proxy_user">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>178</y>
+      <y>200</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -203,12 +206,12 @@
    </widget>
    <widget class="QLabel" name="proxy_pass">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
       <x>31</x>
-      <y>205</y>
+      <y>227</y>
       <width>61</width>
       <height>16</height>
      </rect>
@@ -227,12 +230,12 @@
    </widget>
    <widget class="QCheckBox" name="Setting_auth">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
       <x>14</x>
-      <y>150</y>
+      <y>172</y>
       <width>121</width>
       <height>21</height>
      </rect>
@@ -257,12 +260,12 @@
    </widget>
    <widget class="QLineEdit" name="lineEdit_host">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>75</y>
+      <y>97</y>
       <width>181</width>
       <height>22</height>
      </rect>
@@ -275,12 +278,12 @@
    </widget>
    <widget class="QLineEdit" name="lineEdit_port">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>100</y>
+      <y>122</y>
       <width>51</width>
       <height>22</height>
      </rect>
@@ -302,12 +305,12 @@
    </widget>
    <widget class="QLineEdit" name="lineEdit_user">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>175</y>
+      <y>197</y>
       <width>181</width>
       <height>22</height>
      </rect>
@@ -320,12 +323,12 @@
    </widget>
    <widget class="QLineEdit" name="lineEdit_pass">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>201</y>
+      <y>223</y>
       <width>181</width>
       <height>22</height>
      </rect>
@@ -337,6 +340,33 @@
     </property>
     <property name="echoMode">
      <enum>QLineEdit::Password</enum>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="AutoRefreshMap">
+    <property name="geometry">
+     <rect>
+      <x>14</x>
+      <y>40</y>
+      <width>211</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>Auto Refresh Map when Update</string>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
+    <property name="tristate">
+     <bool>false</bool>
     </property>
    </widget>
   </widget>
