* Complete Status of Airplanes in flight
    + Now can see the status of the pilots when is flyinn
    + Change object widget name
    + Adding 1 more airport into Full DB
    + Add a function to know status pass arg of callsign
      (only for pilots)
    + Order in Country Combo at Search By Country tab

--- a/QtUI/PilotInfo_UI.ui
+++ b/QtUI/PilotInfo_UI.ui
@@ -464,7 +464,7 @@
      <string>Altitude</string>
     </property>
    </widget>
-   <widget class="QLabel" name="FlightStatusNumber">
+   <widget class="QLabel" name="FlightStatusDetail">
     <property name="geometry">
      <rect>
       <x>105</x>
