--- a/QtUI/PilotInfo_UI.ui
+++ b/QtUI/PilotInfo_UI.ui
@@ -139,7 +139,7 @@
     <property name="geometry">
      <rect>
       <x>56</x>
-      <y>188</y>
+      <y>205</y>
       <width>381</width>
       <height>10</height>
      </rect>
@@ -163,7 +163,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>180</y>
+      <y>194</y>
       <width>31</width>
       <height>25</height>
      </rect>
@@ -184,7 +184,7 @@
     <property name="geometry">
      <rect>
       <x>441</x>
-      <y>180</y>
+      <y>194</y>
       <width>31</width>
       <height>25</height>
      </rect>
@@ -205,7 +205,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>110</y>
+      <y>103</y>
       <width>71</width>
       <height>20</height>
      </rect>
@@ -228,7 +228,7 @@
     <property name="geometry">
      <rect>
       <x>253</x>
-      <y>110</y>
+      <y>103</y>
       <width>81</width>
       <height>20</height>
      </rect>
@@ -251,7 +251,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>130</y>
+      <y>116</y>
       <width>231</width>
       <height>20</height>
      </rect>
@@ -272,7 +272,7 @@
     <property name="geometry">
      <rect>
       <x>253</x>
-      <y>130</y>
+      <y>116</y>
       <width>231</width>
       <height>20</height>
      </rect>
@@ -380,7 +380,7 @@
     <property name="geometry">
      <rect>
       <x>198</x>
-      <y>210</y>
+      <y>223</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -403,7 +403,7 @@
     <property name="geometry">
      <rect>
       <x>293</x>
-      <y>208</y>
+      <y>221</y>
       <width>41</width>
       <height>20</height>
      </rect>
@@ -424,7 +424,7 @@
     <property name="geometry">
      <rect>
       <x>435</x>
-      <y>208</y>
+      <y>221</y>
       <width>41</width>
       <height>20</height>
      </rect>
@@ -445,7 +445,7 @@
     <property name="geometry">
      <rect>
       <x>380</x>
-      <y>210</y>
+      <y>223</y>
       <width>61</width>
       <height>16</height>
      </rect>
@@ -468,7 +468,7 @@
     <property name="geometry">
      <rect>
       <x>105</x>
-      <y>208</y>
+      <y>221</y>
       <width>91</width>
       <height>20</height>
      </rect>
@@ -489,7 +489,7 @@
     <property name="geometry">
      <rect>
       <x>16</x>
-      <y>210</y>
+      <y>223</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -512,7 +512,7 @@
     <property name="geometry">
      <rect>
       <x>15</x>
-      <y>75</y>
+      <y>68</y>
       <width>461</width>
       <height>16</height>
      </rect>
@@ -564,7 +564,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>90</y>
+      <y>81</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -761,7 +761,7 @@
     <property name="geometry">
      <rect>
       <x>16</x>
-      <y>248</y>
+      <y>254</y>
       <width>61</width>
       <height>16</height>
      </rect>
@@ -784,7 +784,7 @@
     <property name="geometry">
      <rect>
       <x>17</x>
-      <y>260</y>
+      <y>266</y>
       <width>461</width>
       <height>20</height>
      </rect>
@@ -848,9 +848,9 @@
    <widget class="QLabel" name="nauticalmiles">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>168</y>
-      <width>171</width>
+      <x>110</x>
+      <y>181</y>
+      <width>281</width>
       <height>20</height>
      </rect>
     </property>
@@ -867,6 +867,94 @@
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="Altern_Airport_Text">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>159</y>
+      <width>231</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="Altern_Airport">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>146</y>
+      <width>111</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>Altern Airport 1</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="Altern_Airport_Text_2">
+    <property name="geometry">
+     <rect>
+      <x>253</x>
+      <y>159</y>
+      <width>231</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="Altern_Airport_2">
+    <property name="geometry">
+     <rect>
+      <x>253</x>
+      <y>146</y>
+      <width>111</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>Altern Airport 2</string>
     </property>
    </widget>
   </widget>
