--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -407,7 +407,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>258</y>
+        <y>260</y>
         <width>81</width>
         <height>16</height>
        </rect>
@@ -501,7 +501,7 @@
       </attribute>
       <column>
        <property name="text">
-        <string>Type</string>
+        <string>ICAO</string>
        </property>
       </column>
       <column>
@@ -514,7 +514,7 @@
       <property name="geometry">
        <rect>
         <x>465</x>
-        <y>258</y>
+        <y>260</y>
         <width>51</width>
         <height>16</height>
        </rect>
@@ -536,7 +536,7 @@
       <property name="geometry">
        <rect>
         <x>91</x>
-        <y>254</y>
+        <y>256</y>
         <width>80</width>
         <height>24</height>
        </rect>
@@ -564,7 +564,7 @@
       <property name="geometry">
        <rect>
         <x>171</x>
-        <y>254</y>
+        <y>256</y>
         <width>113</width>
         <height>23</height>
        </rect>
@@ -577,7 +577,7 @@
       <property name="geometry">
        <rect>
         <x>517</x>
-        <y>254</y>
+        <y>256</y>
         <width>61</width>
         <height>24</height>
        </rect>
@@ -590,7 +590,7 @@
       <property name="geometry">
        <rect>
         <x>286</x>
-        <y>254</y>
+        <y>256</y>
         <width>91</width>
         <height>24</height>
        </rect>
@@ -606,7 +606,7 @@
       <property name="geometry">
        <rect>
         <x>580</x>
-        <y>254</y>
+        <y>256</y>
         <width>91</width>
         <height>24</height>
        </rect>
@@ -622,7 +622,7 @@
       <property name="geometry">
        <rect>
         <x>674</x>
-        <y>254</y>
+        <y>256</y>
         <width>20</width>
         <height>24</height>
        </rect>
