--- a/QtUI/SettingWindow_UI.ui
+++ b/QtUI/SettingWindow_UI.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>320</width>
-    <height>290</height>
+    <height>320</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,13 +19,13 @@
   <property name="minimumSize">
    <size>
     <width>320</width>
-    <height>290</height>
+    <height>320</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>320</width>
-    <height>290</height>
+    <width>345</width>
+    <height>320</height>
    </size>
   </property>
   <property name="cursor">
@@ -42,7 +42,7 @@
     <property name="geometry">
      <rect>
       <x>108</x>
-      <y>260</y>
+      <y>284</y>
       <width>99</width>
       <height>23</height>
      </rect>
@@ -109,7 +109,7 @@
     <property name="geometry">
      <rect>
       <x>14</x>
-      <y>68</y>
+      <y>121</y>
       <width>85</width>
       <height>21</height>
      </rect>
@@ -139,7 +139,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>101</y>
+      <y>154</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -163,7 +163,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>125</y>
+      <y>178</y>
       <width>31</width>
       <height>16</height>
      </rect>
@@ -187,7 +187,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>200</y>
+      <y>233</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -211,7 +211,7 @@
     <property name="geometry">
      <rect>
       <x>31</x>
-      <y>227</y>
+      <y>260</y>
       <width>61</width>
       <height>16</height>
      </rect>
@@ -235,7 +235,7 @@
     <property name="geometry">
      <rect>
       <x>14</x>
-      <y>172</y>
+      <y>205</y>
       <width>121</width>
       <height>21</height>
      </rect>
@@ -265,7 +265,7 @@
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>97</y>
+      <y>150</y>
       <width>181</width>
       <height>22</height>
      </rect>
@@ -283,7 +283,7 @@
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>122</y>
+      <y>175</y>
       <width>51</width>
       <height>22</height>
      </rect>
@@ -310,7 +310,7 @@
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>197</y>
+      <y>230</y>
       <width>181</width>
       <height>22</height>
      </rect>
@@ -328,7 +328,7 @@
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>223</y>
+      <y>256</y>
       <width>181</width>
       <height>22</height>
      </rect>
@@ -361,6 +361,60 @@
     </property>
     <property name="text">
      <string>Auto-Refresh the map when connecting to IVAO</string>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
+    <property name="tristate">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="ShowLabelPilots">
+    <property name="geometry">
+     <rect>
+      <x>14</x>
+      <y>65</y>
+      <width>301</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>Show Label of Pilots</string>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
+    <property name="tristate">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="ShowLabelControllers">
+    <property name="geometry">
+     <rect>
+      <x>14</x>
+      <y>90</y>
+      <width>301</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>Show Label of Controllers</string>
     </property>
     <property name="checked">
      <bool>true</bool>
