--- a/QtUI/PilotInfo_UI.ui
+++ b/QtUI/PilotInfo_UI.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>491</width>
-    <height>540</height>
+    <width>500</width>
+    <height>560</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -21,14 +21,14 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>491</width>
-    <height>540</height>
+    <width>500</width>
+    <height>560</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>491</width>
-    <height>540</height>
+    <width>500</width>
+    <height>560</height>
    </size>
   </property>
   <property name="cursor">
@@ -50,10 +50,10 @@
    <widget class="QLabel" name="callsign_label">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>47</y>
-      <width>57</width>
-      <height>14</height>
+      <x>13</x>
+      <y>55</y>
+      <width>51</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="font">
@@ -73,10 +73,10 @@
    <widget class="QLabel" name="callsign_text">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>41</y>
+      <x>61</x>
+      <y>53</y>
       <width>51</width>
-      <height>25</height>
+      <height>20</height>
      </rect>
     </property>
     <property name="font">
@@ -94,8 +94,8 @@
    <widget class="QLabel" name="rating_img">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>42</y>
+      <x>360</x>
+      <y>49</y>
       <width>121</width>
       <height>25</height>
      </rect>
@@ -115,8 +115,8 @@
    <widget class="QLabel" name="rating_label">
     <property name="geometry">
      <rect>
-      <x>265</x>
-      <y>47</y>
+      <x>314</x>
+      <y>53</y>
       <width>51</width>
       <height>16</height>
      </rect>
@@ -140,7 +140,7 @@
      <rect>
       <x>56</x>
       <y>205</y>
-      <width>381</width>
+      <width>413</width>
       <height>10</height>
      </rect>
     </property>
@@ -204,7 +204,7 @@
    <widget class="QLabel" name="Departure_Info">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>15</x>
       <y>103</y>
       <width>71</width>
       <height>20</height>
@@ -227,7 +227,7 @@
    <widget class="QLabel" name="Destination_Info">
     <property name="geometry">
      <rect>
-      <x>253</x>
+      <x>256</x>
       <y>103</y>
       <width>81</width>
       <height>20</height>
@@ -250,8 +250,8 @@
    <widget class="QLabel" name="DepartureText">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>116</y>
+      <x>15</x>
+      <y>118</y>
       <width>231</width>
       <height>20</height>
      </rect>
@@ -271,8 +271,8 @@
    <widget class="QLabel" name="DestinationText">
     <property name="geometry">
      <rect>
-      <x>253</x>
-      <y>116</y>
+      <x>256</x>
+      <y>118</y>
       <width>231</width>
       <height>20</height>
      </rect>
@@ -292,8 +292,8 @@
    <widget class="QTextEdit" name="RouteText">
     <property name="geometry">
      <rect>
-      <x>8</x>
-      <y>352</y>
+      <x>11</x>
+      <y>288</y>
       <width>476</width>
       <height>111</height>
      </rect>
@@ -314,8 +314,8 @@
    <widget class="QLabel" name="Route_label">
     <property name="geometry">
      <rect>
-      <x>15</x>
-      <y>332</y>
+      <x>13</x>
+      <y>270</y>
       <width>41</width>
       <height>16</height>
      </rect>
@@ -337,8 +337,8 @@
    <widget class="QPushButton" name="AddFriend">
     <property name="geometry">
      <rect>
-      <x>145</x>
-      <y>492</y>
+      <x>150</x>
+      <y>507</y>
       <width>99</width>
       <height>23</height>
      </rect>
@@ -358,8 +358,8 @@
    <widget class="QPushButton" name="Close">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>492</y>
+      <x>255</x>
+      <y>507</y>
       <width>99</width>
       <height>23</height>
      </rect>
@@ -379,7 +379,7 @@
    <widget class="QLabel" name="GroundSpeed_label">
     <property name="geometry">
      <rect>
-      <x>198</x>
+      <x>205</x>
       <y>227</y>
       <width>101</width>
       <height>16</height>
@@ -402,7 +402,7 @@
    <widget class="QLabel" name="GroundSpeedNumber">
     <property name="geometry">
      <rect>
-      <x>293</x>
+      <x>290</x>
       <y>225</y>
       <width>41</width>
       <height>20</height>
@@ -423,7 +423,7 @@
    <widget class="QLabel" name="AltitudeNumber">
     <property name="geometry">
      <rect>
-      <x>435</x>
+      <x>436</x>
       <y>225</y>
       <width>41</width>
       <height>20</height>
@@ -444,7 +444,7 @@
    <widget class="QLabel" name="Altitude_label">
     <property name="geometry">
      <rect>
-      <x>380</x>
+      <x>387</x>
       <y>227</y>
       <width>61</width>
       <height>16</height>
@@ -508,88 +508,13 @@
      <string>Flight Status</string>
     </property>
    </widget>
-   <widget class="Line" name="line1">
-    <property name="geometry">
-     <rect>
-      <x>15</x>
-      <y>68</y>
-      <width>461</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
-   <widget class="Line" name="line2">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>467</y>
-      <width>461</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="cursor">
-     <cursorShape>PointingHandCursor</cursorShape>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
-   <widget class="QLabel" name="PilotInfo">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>10</y>
-      <width>121</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>8</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="cursor">
-     <cursorShape>PointingHandCursor</cursorShape>
-    </property>
-    <property name="text">
-     <string>Pilot in Command</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="FlightDetails">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>81</y>
-      <width>91</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>8</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="cursor">
-     <cursorShape>PointingHandCursor</cursorShape>
-    </property>
-    <property name="text">
-     <string>Flight Details</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="PilotNameText">
     <property name="geometry">
      <rect>
-      <x>129</x>
-      <y>5</y>
+      <x>13</x>
+      <y>23</y>
       <width>181</width>
-      <height>25</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="font">
@@ -607,8 +532,8 @@
    <widget class="QLabel" name="Home">
     <property name="geometry">
      <rect>
-      <x>357</x>
-      <y>10</y>
+      <x>314</x>
+      <y>25</y>
       <width>41</width>
       <height>16</height>
      </rect>
@@ -630,9 +555,9 @@
    <widget class="QLabel" name="HomeFlag">
     <property name="geometry">
      <rect>
-      <x>397</x>
-      <y>5</y>
-      <width>31</width>
+      <x>360</x>
+      <y>21</y>
+      <width>41</width>
       <height>25</height>
      </rect>
     </property>
@@ -651,8 +576,8 @@
    <widget class="QLabel" name="airline_image">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>42</y>
+      <x>195</x>
+      <y>51</y>
       <width>111</width>
       <height>25</height>
      </rect>
@@ -672,8 +597,8 @@
    <widget class="QLabel" name="PobText">
     <property name="geometry">
      <rect>
-      <x>161</x>
-      <y>305</y>
+      <x>130</x>
+      <y>461</y>
       <width>51</width>
       <height>20</height>
      </rect>
@@ -693,8 +618,8 @@
    <widget class="QLabel" name="TransponderText">
     <property name="geometry">
      <rect>
-      <x>358</x>
-      <y>304</y>
+      <x>342</x>
+      <y>460</y>
       <width>41</width>
       <height>20</height>
      </rect>
@@ -715,7 +640,7 @@
     <property name="geometry">
      <rect>
       <x>270</x>
-      <y>306</y>
+      <y>462</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -738,8 +663,8 @@
     <property name="geometry">
      <rect>
       <x>16</x>
-      <y>307</y>
-      <width>141</width>
+      <y>463</y>
+      <width>121</width>
       <height>16</height>
      </rect>
     </property>
@@ -761,8 +686,8 @@
     <property name="geometry">
      <rect>
       <x>16</x>
-      <y>258</y>
-      <width>61</width>
+      <y>428</y>
+      <width>70</width>
       <height>16</height>
      </rect>
     </property>
@@ -777,14 +702,14 @@
      <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="text">
-     <string>Airplane</string>
+     <string>Type</string>
     </property>
    </widget>
    <widget class="QLabel" name="AirplaneText">
     <property name="geometry">
      <rect>
       <x>17</x>
-      <y>270</y>
+      <y>440</y>
       <width>461</width>
       <height>20</height>
      </rect>
@@ -804,8 +729,8 @@
    <widget class="QLabel" name="vid_label">
     <property name="geometry">
      <rect>
-      <x>11</x>
-      <y>28</y>
+      <x>193</x>
+      <y>25</y>
       <width>21</width>
       <height>16</height>
      </rect>
@@ -827,9 +752,9 @@
    <widget class="QLabel" name="vidText">
     <property name="geometry">
      <rect>
-      <x>38</x>
-      <y>28</y>
-      <width>51</width>
+      <x>220</x>
+      <y>25</y>
+      <width>61</width>
       <height>16</height>
      </rect>
     </property>
@@ -872,8 +797,8 @@
    <widget class="QLabel" name="Altern_Airport_Text">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>159</y>
+      <x>15</x>
+      <y>160</y>
       <width>231</width>
       <height>20</height>
      </rect>
@@ -893,7 +818,7 @@
    <widget class="QLabel" name="Altern_Airport">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>15</x>
       <y>146</y>
       <width>111</width>
       <height>20</height>
@@ -916,8 +841,8 @@
    <widget class="QLabel" name="Altern_Airport_Text_2">
     <property name="geometry">
      <rect>
-      <x>253</x>
-      <y>159</y>
+      <x>256</x>
+      <y>160</y>
       <width>231</width>
       <height>20</height>
      </rect>
@@ -937,7 +862,7 @@
    <widget class="QLabel" name="Altern_Airport_2">
     <property name="geometry">
      <rect>
-      <x>253</x>
+      <x>256</x>
       <y>146</y>
       <width>111</width>
       <height>20</height>
@@ -957,6 +882,257 @@
      <string>Altern Airport 2</string>
     </property>
    </widget>
+   <widget class="QLabel" name="AccordingFP">
+    <property name="geometry">
+     <rect>
+      <x>16</x>
+      <y>247</y>
+      <width>121</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>According Flight Plan</string>
+    </property>
+   </widget>
+   <widget class="QGroupBox" name="GroupDetails">
+    <property name="geometry">
+     <rect>
+      <x>4</x>
+      <y>90</y>
+      <width>491</width>
+      <height>321</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="title">
+     <string>Flight Details</string>
+    </property>
+    <zorder>RouteText</zorder>
+   </widget>
+   <widget class="QGroupBox" name="PilotDetails">
+    <property name="geometry">
+     <rect>
+      <x>4</x>
+      <y>10</y>
+      <width>491</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="title">
+     <string>Pilot in Command</string>
+    </property>
+   </widget>
+   <widget class="QGroupBox" name="Aircraft">
+    <property name="geometry">
+     <rect>
+      <x>4</x>
+      <y>416</y>
+      <width>491</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="title">
+     <string>Aircraft</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="Airline">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>55</y>
+      <width>41</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>Airline</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="GSFiled">
+    <property name="geometry">
+     <rect>
+      <x>205</x>
+      <y>248</y>
+      <width>51</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>GS (Filed)</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="GSFiledText">
+    <property name="geometry">
+     <rect>
+      <x>260</x>
+      <y>246</y>
+      <width>41</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="FLText">
+    <property name="geometry">
+     <rect>
+      <x>441</x>
+      <y>245</y>
+      <width>41</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="FLFiled">
+    <property name="geometry">
+     <rect>
+      <x>387</x>
+      <y>248</y>
+      <width>51</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>FL (Filed)</string>
+    </property>
+   </widget>
+   <zorder>Aircraft</zorder>
+   <zorder>PilotDetails</zorder>
+   <zorder>GroupDetails</zorder>
+   <zorder>callsign_label</zorder>
+   <zorder>callsign_text</zorder>
+   <zorder>rating_img</zorder>
+   <zorder>rating_label</zorder>
+   <zorder>progressBarTrack</zorder>
+   <zorder>DepartureImage</zorder>
+   <zorder>DestinationImage</zorder>
+   <zorder>Departure_Info</zorder>
+   <zorder>Destination_Info</zorder>
+   <zorder>DepartureText</zorder>
+   <zorder>DestinationText</zorder>
+   <zorder>RouteText</zorder>
+   <zorder>Route_label</zorder>
+   <zorder>AddFriend</zorder>
+   <zorder>Close</zorder>
+   <zorder>GroundSpeed_label</zorder>
+   <zorder>GroundSpeedNumber</zorder>
+   <zorder>AltitudeNumber</zorder>
+   <zorder>Altitude_label</zorder>
+   <zorder>FlightStatusDetail</zorder>
+   <zorder>FlightStatus_label</zorder>
+   <zorder>PilotNameText</zorder>
+   <zorder>Home</zorder>
+   <zorder>HomeFlag</zorder>
+   <zorder>airline_image</zorder>
+   <zorder>PobText</zorder>
+   <zorder>TransponderText</zorder>
+   <zorder>TransponderLabel</zorder>
+   <zorder>POBLabel</zorder>
+   <zorder>AirplaneLabel</zorder>
+   <zorder>AirplaneText</zorder>
+   <zorder>vid_label</zorder>
+   <zorder>vidText</zorder>
+   <zorder>nauticalmiles</zorder>
+   <zorder>Altern_Airport_Text</zorder>
+   <zorder>Altern_Airport</zorder>
+   <zorder>Altern_Airport_Text_2</zorder>
+   <zorder>Altern_Airport_2</zorder>
+   <zorder>AccordingFP</zorder>
+   <zorder>Airline</zorder>
+   <zorder>GSFiled</zorder>
+   <zorder>GSFiledText</zorder>
+   <zorder>FLText</zorder>
+   <zorder>FLFiled</zorder>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
